--- a/src/Rentler.Interview.Api/appsettings.Development.json
+++ b/src/Rentler.Interview.Api/appsettings.Development.json
@@ -11,6 +11,6 @@
     }
   },
   "ConnectionStrings": {
-    "SqlDatabaseConnection": ""
+    "SqlDatabaseConnection": "Server=rentler-stage.database.windows.net;Database=rentler-test-interview-jacob;User=jboswell;Password=dYM2oyu3oXqxc2;MultipleActiveResultSets=true;Connection Timeout=30;"
   }
 }
