--- a/src/Rentler.Interview.Api/Properties/launchSettings.json
+++ b/src/Rentler.Interview.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Rentler.Interview.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7263;http://localhost:5027",
       "environmentVariables": {
