--- a/src/Rentler.Interview.Lib/Rentler.Interview.Lib.csproj
+++ b/src/Rentler.Interview.Lib/Rentler.Interview.Lib.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+  </ItemGroup>
 
 </Project>
